- Fixed references - First pass budget

--- a/MountainSnowpack.bib
+++ b/MountainSnowpack.bib
@@ -1,5 +1,5 @@
 @article{lawrence2012ccsm4,
-  title={The CCSM4 land simulation, 1850-2005: Assessment of surface climate and new capabilities},
+  title="{The CCSM4 land simulation, 1850-2005: Assessment of surface climate and new capabilities}",
   author={Lawrence, David M and Oleson, Keith W and Flanner, Mark G and Fletcher, Christopher G and Lawrence, Peter J and Levis, Samuel and Swenson, Sean C and Bonan, Gordon B},
   journal={Journal of Climate},
   volume={25},
@@ -18,7 +18,7 @@
 }
 
 @article{perket2014diagnosing,
-  title={Diagnosing shortwave cryosphere radiative effect and its 21st century evolution in CESM},
+  title="{Diagnosing shortwave cryosphere radiative effect and its 21st century evolution in CESM}",
   author={Perket, Justin and Flanner, Mark G and Kay, Jennifer E},
   journal={Journal of Geophysical Research: Atmospheres},
   volume={119},
@@ -38,8 +38,8 @@
 }
 
 @article{sterle2013retention,
-  title={Retention and radiative forcing of black carbon in eastern Sierra Nevada snow},
-  author={Sterle, Kelley M and McConnell, Joseph R and Dozier, Jeff and Edwards, Ross and Flanner, MG},
+  title="{Retention and radiative forcing of black carbon in eastern Sierra Nevada snow}",
+  author={Sterle, Kelley M and McConnell, Joseph R and Dozier, Jeff and Edwards, Ross and Flanner, M G},
   journal={The Cryosphere},
   volume={7},
   pages={365--374},
@@ -49,7 +49,7 @@
 
 @article{flanner2012enhanced,
   title={Enhanced solar energy absorption by internally-mixed black carbon in snow grains},
-  author={Flanner, MG and Liu, Xiaohong and Zhou, Cheng and Penner, Joyce E and Jiao, C},
+  author={Flanner, Mark G and Liu, Xiaohong and Zhou, Cheng and Penner, Joyce E and Jiao, C},
   journal={Atmospheric Chemistry and Physics},
   volume={12},
   pages={4699--4721},
@@ -58,8 +58,8 @@
 }
 
 @article{kuipers2011new,
-  title={A new albedo parameterization for use in climate models over the Antarctic ice sheet},
-  author={Kuipers Munneke, P and Van den Broeke, MR and Lenaerts, JTM and Flanner, MG and Gardner, AS and Van de Berg, WJ},
+  title="{A new albedo parameterization for use in climate models over the Antarctic ice sheet}",
+  author={Kuipers Munneke, P and Van den Broeke, M R and Lenaerts, J T M and Flanner, M G and Gardner, A S and Van de Berg, W J},
   journal={Journal of Geophysical Research: Atmospheres (1984--2012)},
   volume={116},
   year={2011},
@@ -68,7 +68,7 @@
 
 @article{flanner2011radiative,
   title={Radiative forcing and albedo feedback from the Northern Hemisphere cryosphere between 1979 and 2008},
-  author={Flanner, MG and Shell, KM and Barlage, M and Perovich, DK and Tschudi, MA},
+  author={Flanner, Mark G and Shell, K M and Barlage, M and Perovich, D K and Tschudi, M A},
   journal={Nature Geoscience},
   volume={4},
   pages={151--155},
@@ -124,7 +124,7 @@
 }
 
 @article{pavelsky2011accumulation,
-  title={Accumulation and melt dynamics of snowpack from a multiresolution regional climate model in the central Sierra Nevada, California},
+  title="{Accumulation and melt dynamics of snowpack from a multiresolution regional climate model in the central Sierra Nevada, California}",
   author={Pavelsky, Tamlin M and Kapnick, Sarah and Hall, Alex},
   journal={Journal of Geophysical Research: Atmospheres (1984--2012)},
   volume={116},
@@ -132,21 +132,21 @@
   publisher={Wiley Online Library}
 }
 
-@article{zhao2011impactb,
-  title={The impact of climate change on air quality-related meteorological conditions in California. Part II: Present versus future time simulation analysis},
-  author={Zhao, Zhan and Chen, Shu-Hua and Kleeman, Michael J and Mahmud, Abdullah},
-  journal={Journal of climate},
-  volume={24},
-  pages={3362--3376},
-  year={2011}
-}
-
 @article{zhao2011impacta,
-  title={The impact of climate change on air quality-related meteorological conditions in California. Part I: present time simulation analysis},
+  title="{The impact of climate change on air quality-related meteorological conditions in California. Part I: Present time simulation analysis}",
   author={Zhao, Zhan and Chen, Shu-Hua and Kleeman, Michael J and Tyree, Mary and Cayan, Dan},
   journal={Journal of Climate},
   volume={24},
   pages={3344--3361},
+  year={2011}
+}
+
+@article{zhao2011impactb,
+  title="{The impact of climate change on air quality-related meteorological conditions in California. Part II: Present versus future time simulation analysis}",
+  author={Zhao, Zhan and Chen, Shu-Hua and Kleeman, Michael J and Mahmud, Abdullah},
+  journal={Journal of Climate},
+  volume={24},
+  pages={3362--3376},
   year={2011}
 }
 
@@ -161,7 +161,7 @@
 }
 
 @article{silverman2013dynamically,
-  title={Dynamically downscaled winter precipitation over complex terrain of the Central Rockies of Western Montana, USA},
+  title="{Dynamically downscaled winter precipitation over complex terrain of the Central Rockies of Western Montana, USA}",
   author={Silverman, NL and Maneta, MP and Chen, S-H and Harper, JT},
   journal={Water Resources Research},
   volume={49},
@@ -180,7 +180,7 @@
 }
 
 @article{zhang2014development,
-  title={Development of a source oriented version of the WRF/Chem model and its application to the California regional PM 10/PM 2.5 air quality study},
+  title="{Development of a source oriented version of the WRF/Chem model and its application to the California regional PM 10/PM 2.5 air quality study}",
   author={Zhang, H and DeNero, SP and Joe, DK and Lee, H-H and Chen, S-H and Michalakes, J and Kleeman, MJ},
   journal={Atmospheric Chemistry and Physics},
   volume={14},
@@ -190,7 +190,7 @@
 }
 
 @article{yang2014evaluating,
-  title={Evaluating the impact of the COSMIC RO bending angle data on predicting the heavy precipitation episode on 16 June 2008 during SoWMEX-IOP8},
+  title="{Evaluating the impact of the COSMIC RO bending angle data on predicting the heavy precipitation episode on 16 June 2008 during SoWMEX-IOP8}",
   author={Yang, Shu-Chih and Chen, Shu-Hua and Chen, Shu-Ya and Huang, Ching-Yuang and Chen, Ching-Sen},
   journal={Monthly Weather Review},
   volume={142},
@@ -199,7 +199,7 @@
 }
 
 @article{xu2014coupling,
-  title={Coupling the high complexity land surface model ACASA to the mesoscale model WRF},
+  title="{Coupling the high complexity land surface model ACASA to the mesoscale model WRF}",
   author={Xu, L and Pyles, RD and Paw U, KT and Chen, SH and Monier, E},
   journal={Geoscientific Model Development Discussions},
   volume={7},
@@ -227,7 +227,7 @@
 }
 
 @article{leung2009atmospheric,
-  title={Atmospheric rivers induced heavy precipitation and flooding in the western US simulated by the WRF regional climate model},
+  title="{Atmospheric rivers induced heavy precipitation and flooding in the western US simulated by the WRF regional climate model}",
   author={Leung, L Ruby and Qian, Yun},
   journal={Geophysical research letters},
   volume={36},
@@ -237,14 +237,14 @@
 
 @article{chen2014modeling,
   title={Modeling seasonal snowpack evolution in the complex terrain and forested Colorado Headwaters region: A model intercomparison study},
-  author={Chen, Fei and Barlage, Michael and Tewari, Mukul and Rasmussen, Roy and Jin, Jiming and Lettenmaier, Dennis and Livneh, Ben and Lin, Chiyu and Miguez-Macho, Gonzalo and Niu, Guo-Yue and others},
+  author={Chen, Fei and Barlage, Michael and Tewari, Mukul and Rasmussen, Roy and Jin, Jiming and Lettenmaier, Dennis and Livneh, Ben and Lin, Chiyu and Miguez-Macho, Gonzalo and Niu, Guo-Yue and Lijuan, Wen and Zong-Liang, Yang},
   journal={Journal of Geophysical Research: Atmospheres},
   year={2014},
   publisher={Wiley Online Library}
 }
 
 @article{serreze1999characteristics,
-  title={Characteristics of the western United States snowpack from snowpack telemetry (SNOTEL) data},
+  title="{Characteristics of the western United States snowpack from snowpack telemetry (SNOTEL) data}",
   author={Serreze, Mark C and Clark, Martyn P and Armstrong, Richard L and McGinnis, David A and Pulwarty, Roger S},
   journal={Water Resources Research},
   volume={35},
@@ -254,7 +254,7 @@
 }
 
 @article{brown2003gridded,
-  title={Gridded North American monthly snow depth and snow water equivalent for GCM evaluation},
+  title="{Gridded North American monthly snow depth and snow water equivalent for GCM evaluation}",
   author={Brown, Ross D and Brasnett, Bruce and Robinson, David},
   journal={Atmosphere-Ocean},
   volume={41},
@@ -284,7 +284,7 @@
 
 @article{mesinger2006north,
   title="{North American Regional Reanalysis}",
-  author={Mesinger, Fedor and DiMego, Geoff and Kalnay, Eugenia and Mitchell, Kenneth and Shafran, Perry C and Ebisuzaki, Wesley and Jovic, Du{\v{s}}an and Woollen, Jack and Rogers, Eric and Berbery, Ernesto H and others},
+  author={Mesinger, Fedor and DiMego, Geoff and Kalnay, Eugenia and Mitchell, Kenneth and Shafran, Perry C and Ebisuzaki, Wesley and Jovic, Du{\v{s}}an and Woollen, Jack and Rogers, Eric and Berbery, Ernesto H and Ek, Michael B and Fan, Yun and Grumbine, Robert and Higgins, Wayne and Li, Hong and Lin, Ying and Manikin, Geoff and Parrish, David and Shi, Wei},
   journal={Bulletin of the American Meteorological Society},
   volume={87},
   pages={343--360},
@@ -293,7 +293,7 @@
 
 @article{saha2014ncep,
   title="{The NCEP climate forecast system version 2}",
-  author={Saha, Suranjana and Moorthi, Shrinivas and Wu, Xingren and Wang, Jiande and Nadiga, Sudhir and Tripp, Patrick and Behringer, David and Hou, Yu-Tai and Chuang, Hui-ya and Iredell, Mark and others},
+  author={Saha, Suranjana and Moorthi, Shrinivas and Wu, Xingren and Wang, Jiande and Nadiga, Sudhir and Tripp, Patrick and Behringer, David and Hou, Yu-Tai and Chuang, Hui-ya and Iredell, Mark and Ek, Michael and Meng, Jesse and Yang, Rongqian Yang and Pe\~na Mendez, Malaqu’as  and van den Dool, Huug and Zhang, Qin and Wang, Wanqiu and Chen, Mingyue and Becker, Emily},
   journal={Journal of Climate},
   volume={27},
   pages={2185--2208},
@@ -303,20 +303,21 @@
 @article{zender2006netcdf,
   title="{netCDF Operators (NCO) for analysis of self-describing gridded geoscience data}",
   author={Zender, CS},
-  journal={Submitted to Environ. Modell. Softw},
-  year={2006}
+  journal={Environmental Modelling Software},
+  year={2006},
+  note={(Submitted)}
 }
 
 @techreport{schulzweida2007cdo,
-  title={CDO user's guide--Climate Data Operators},
+  title="{CDO user's guide--Climate Data Operators}",
   author={Schulzweida, U and Kornblueh, L and Quast, R},
   year={2007},
-  institution={Version 1.0. 7, Tech. rep., online available at: www. mpimet. mpg. de/fileadmin/software/cdo}
+  note={Version 1.0.7, Tech. rep., online available at: \url{www.mpimet.mpg.de/fileadmin/software/cdo}}
 }
 
 @article{williams2009earth,
   title={The Earth System Grid: Enabling access to multimodel climate simulation data},
-  author={Williams, Dean N and Drach, R and Ananthakrishnan, R and Foster, IT and Fraser, D and Siebenlist, F and Bernholdt, DE and Chen, M and Schwidder, J and Bharathi, S and others},
+  author={Williams, Dean N and Drach, R and Ananthakrishnan, R and Foster, IT and Fraser, D and Siebenlist, F and Bernholdt, DE and Chen, M and Schwidder, J and Bharathi, S and Chervenak, L and Schuler, R and Su, M and Brown, D and Cinquini, L and Fox, P and Garcia, J and Middleton, D E and Strand, W G and Wilhelmi, N and Hankin, S and Schweitzer, R and Jones, P and Shoshani, A and Sim, A},
   journal={Bulletin of the American Meteorological Society},
   volume={90},
   pages={195--205},
@@ -335,7 +336,7 @@
 }
 
 @article{fournier2004spectral,
-  title={The spectral element atmosphere model (SEAM): High-resolution parallel computation and localized resolution of regional dynamics},
+  title="{The spectral element atmosphere model (SEAM): High-resolution parallel computation and localized resolution of regional dynamics}",
   author={Fournier, Aim{\'e} and Taylor, Mark A and Tribbia, Joseph J},
   journal={Monthly Weather Review},
   volume={132},
@@ -345,14 +346,12 @@
 }
 
 @article{hurrell2013community,
-  title={The community earth system model: a framework for collaborative research},
-  author={Hurrell, James W and Holland, MM and Gent, PR and Ghan, S and Kay, Jennifer E and Kushner, PJ and Lamarque, J-F and Large, WG and Lawrence, D and Lindsay, K and others},
+  title="{The community Earth system model: A framework for collaborative research}",
+  author={Hurrell, James W and Holland, MM and Gent, PR and Ghan, S and Kay, JE and Kushner, PJ and Lamarque, J-F and Large, WG and Lawrence, D and Lindsay, K and Lipscomb, WH and Long, MC and Mahowald, N and Marsh, DR and Neale, RB and Rasch, P and Vavrus, S and Vertenstein, M and Bader, D and Collins, WD and Hack, JJ and Kiehl, J and Marshall, S},
   journal={Bulletin of the American Meteorological Society},
-  volume={94},
-  number={9},
-  pages={1339--1360},
   year={2013},
-  publisher={American Meteorological Society}
+  volume={94},
+  pages={1339--1360}
 }
 
 @inproceedings{collins2013nonhydrostatic,
@@ -412,7 +411,7 @@ journal = {Quart. J. Royal Meteor. Soc.},
 }
 
 @article{ullrich2012mcore,
-  title={MCore: A non-hydrostatic atmospheric dynamical core utilizing high-order finite-volume methods},
+  title="{MCore: A non-hydrostatic atmospheric dynamical core utilizing high-order finite-volume methods}",
   author={Ullrich, Paul A and Jablonowski, Christiane},
   journal={Journal of Computational Physics},
   volume={231},
@@ -454,8 +453,8 @@ journal = {Quart. J. Royal Meteor. Soc.},
 }
 
 @article{ullrich2012operator,
-  title={Operator-split Runge-Kutta-Rosenbrock methods for nonhydrostatic atmospheric models},
-  author={Ullrich, Paul and Jablonowski, Christiane},
+  title="{Operator-split Runge-Kutta-Rosenbrock methods for nonhydrostatic atmospheric models}",
+  author={Ullrich, Paul A and Jablonowski, Christiane},
   journal={Monthly Weather Review},
   volume={140},
   number={4},
@@ -515,7 +514,7 @@ journal = {Quart. J. Royal Meteor. Soc.},
 }
 
 @article{rutter2009SnowMIP2,
-  title={SNOWMIP2: An evaluation of forest snow process simulations},
+  title="{SNOWMIP2: An evaluation of forest snow process simulations}",
   author={Essery, Richard and Rutter, Nick and Pomeroy, John and Baxter, Robert and St{\"a}hli, Manfred and Gustafsson, David and Barr, Alan and Bartlett, Paul and Elder, Kelly},
   journal={Bulletin of the American Meteorological Society},
   volume={90},
@@ -524,7 +523,7 @@ journal = {Quart. J. Royal Meteor. Soc.},
 }
 
 @article{brownandmote2009,
-  title={The response of northern hemisphere snow cover to a changing climate*},
+  title={The response of northern hemisphere snow cover to a changing climate},
   author={Brown, Ross D and Mote, Philip W},
   journal={Journal of Climate},
   volume={22},
@@ -553,7 +552,7 @@ journal = {Quart. J. Royal Meteor. Soc.},
 }
 
 @article{knowles2006trends,
-  title={Trends in snowfall versus rainfall in the western United States},
+  title="{Trends in snowfall versus rainfall in the western United States}",
   author={Knowles, Noah and Dettinger, Michael D and Cayan, Daniel R},
   journal={Journal of Climate},
   volume={19},
@@ -571,7 +570,7 @@ journal = {Quart. J. Royal Meteor. Soc.},
 }
 
 @article{dyer2006spatial,
-  title={Spatial variability and trends in observed snow depth over North America},
+  title="{Spatial variability and trends in observed snow depth over North America}",
   author={Dyer, Jamie L and Mote, Thomas L},
   journal={Geophysical Research Letters},
   volume={33},
@@ -579,7 +578,7 @@ journal = {Quart. J. Royal Meteor. Soc.},
 }
 
 @article{maurer2007detection,
-  title={Detection, attribution, and sensitivity of trends toward earlier streamflow in the Sierra Nevada},
+  title="{Detection, attribution, and sensitivity of trends toward earlier streamflow in the Sierra Nevada}",
   author={Maurer, EP and Stewart, IT and Bonfils, C and Duffy, PB and Cayan, D},
   journal={Journal of Geophysical Research: Atmospheres},
   volume={112},
@@ -587,7 +586,7 @@ journal = {Quart. J. Royal Meteor. Soc.},
 }
 
 @article{dettinger1995large,
-  title={Large-scale atmospheric forcing of recent trends toward early snowmelt runoff in California},
+  title="{Large-scale atmospheric forcing of recent trends toward early snowmelt runoff in California}",
   author={Dettinger, Michael D and Cayan, Daniel R},
   journal={Journal of Climate},
   volume={8},
@@ -647,7 +646,7 @@ pages={118-130},
 }
 
 @article{yongjiu1997land,
-  title={A land surface model (IAP94) for climate studies part I: formulation and validation in off-line experiments},
+  title="{A land surface model (IAP94) for climate studies part I: formulation and validation in off-line experiments}",
   author={Yongjiu, Dai and Qingcun, Zeng},
   journal={Advances in Atmospheric Sciences},
   volume={14},
@@ -672,8 +671,8 @@ pages={118-130},
 }
 
 @article{lawrence2011parameterization,
-  title={Parameterization improvements and functional and structural advances in version 4 of the Community Land Model},
-  author={Lawrence, David M and Oleson, Keith W and Flanner, Mark G and Thornton, Peter E and Swenson, Sean C and Lawrence, Peter J and Zeng, Xubin and Yang, Zong-Liang and Levis, Samuel and Sakaguchi, Koichi and others},
+  title="{Parameterization improvements and functional and structural advances in version 4 of the Community Land Model}",
+  author={Lawrence, David M and Oleson, Keith W and Flanner, Mark G and Thornton, Peter E and Swenson, Sean C and Lawrence, Peter J and Zeng, Xubin and Yang, Zong-Liang and Levis, Samuel and Sakaguchi, Koichi and Bonan, Gordon B and Slater, Andrew G},
   journal={Journal of Advances in Modeling Earth Systems},
   volume={3},
   year={2011},
@@ -690,7 +689,7 @@ pages={118-130},
 
 @MISC{NCDC2014,
 AUTHOR = {{National Climatic Data Center (NCDC)}},
-YEAR = {cited 2014},
+YEAR = {Cited 2014},
 TITLE = {{Arctic Oscillation (AO)}},
 NOTE = {[Available online at \url{http://www.ncdc.noaa.gov/teleconnections/ao.php}]}}
 
@@ -714,7 +713,7 @@ TITLE = {{Chapter 12 - Hydro Power}},
 NOTE = {[Available online at \url{http://www.energyquest.ca.gov/story/chapter12.html}]}}
 
 @article{bales2006mountain,
-  title={Mountain hydrology of the western United States},
+  title="{Mountain hydrology of the western United States}",
   author={Bales, Roger C and Molotch, Noah P and Painter, Thomas H and Dettinger, Michael D and Rice, Robert and Dozier, Jeff},
   journal={Water Resources Research},
   volume={42},
@@ -741,7 +740,7 @@ NOTE = {[Available online at \url{http://www.energyquest.ca.gov/story/chapter12.
 }
 
 @article{cayan1996interannual,
-  title={Interannual climate variability and snowpack in the western United States},
+  title="{Interannual climate variability and snowpack in the western United States}",
   author={Cayan, Daniel R},
   journal={Journal of Climate},
   volume={9},
@@ -804,12 +803,12 @@ journal = {Progress in Physical Geography}
 }
 
 @article{mote_declining_2005,
-	title = {{DECLINING} {MOUNTAIN} {SNOWPACK} {IN} {WESTERN} {NORTH} {AMERICA}*},
-	volume = {86},
-	journal = {Bulletin of the American Meteorological Society},
-	author = {Mote, Philip W. and Hamlet, Alan F. and Clark, Martyn P. and Lettenmaier, Dennis P.},
-	year = {2005},
-	pages = {39--49},
+  title = {Declining mountain snowpack in Western North America},
+  volume = {86},
+  journal = {Bulletin of the American Meteorological Society},
+  author = {Mote, Philip W. and Hamlet, Alan F. and Clark, Martyn P. and Lettenmaier, Dennis P.},
+  year = {2005},
+  pages = {39--49},
 }
 
 @article{lavers2012detection,
@@ -877,7 +876,7 @@ journal = {Progress in Physical Geography}
 @ARTICLE{LMHSJL2013MWR,
   title={A Two-Way Nested Global-Regional Dynamical Core on the Cubed-Sphere Grid},
   author={Harris, Lucas M and Lin, Shian-Jiann},
-  journal={Mon. Weather Rev.},
+  journal={Monthly Weather Review},
   volume={141},
   number={1},
   pages={283--306},
@@ -887,23 +886,23 @@ journal = {Progress in Physical Geography}
 @article{CMZCJMAT2013MWR,
   title={Using Variable Resolution Meshes to Model Tropical Cyclones in the {C}ommunity {A}tmosphere {M}odel},
   author={Zarzycki, Colin M and Jablonowski, Christiane and Taylor, Mark A},
-  journal={Mon. Weather Rev.},
+  journal={Monthly Weather Review},
   year={2013},
-  note={In press}
+  note={(In press)}
 }
 
 @article{mccorquodale2014adaptive,
   author = {McCorquodale, P. and P.~A. Ullrich and H. Johansen and P. Colella},
   year = {2014},
   title = "{An adaptive multiblock high-order finite-volume method for solving the shallow-water equations on the sphere}",
-  journal = {Comm. Appl. Math. Comp. Sci.},
-  note = {Under revision}
+  journal = {Communications in Applied Mathematics and Computer Science},
+  note = {(Under revision)}
 } 
 
 @article{zarzycki2014multidecadal,
   title="{A multidecadal simulation of Atlantic tropical cyclones using a variable-resolution global atmospheric general circulation model}",
   author={Zarzycki, Colin M and Jablonowski, Christiane},
-  journal={J. Adv. Model. Earth Systems},
+  journal={Journal of Advances in Modeling Earth Systems},
   volume={6},
   number={3},
   pages={805--828},
@@ -912,9 +911,9 @@ journal = {Progress in Physical Geography}
 }
 
 @article{rauscher2013exploring,
-  title={Exploring a Global Multiresolution Modeling Approach Using Aquaplanet Simulations*},
+  title={Exploring a Global Multiresolution Modeling Approach Using Aquaplanet Simulations},
   author={Rauscher, Sara A and Ringler, Todd D and Skamarock, William C and Mirin, Arthur A},
-  journal={J. Climate},
+  journal={Journal of Climate},
   volume={26},
   number={8},
   pages={2432--2452},
@@ -924,7 +923,7 @@ journal = {Progress in Physical Geography}
 @article{rauscher2014impact,
   title={Impact of Variable-Resolution Meshes on Midlatitude Baroclinic Eddies Using {CAM-MPAS-A}},
   author={Rauscher, Sara A and Ringler, Todd D},
-  journal={Mon. Weather Rev.},
+  journal={Monthly Weather Review},
   volume={142},
   number={11},
   pages={4256--4268},
@@ -934,7 +933,7 @@ journal = {Progress in Physical Geography}
 @article{zarzycki2014aquaplanet,
   title="{Aquaplanet Experiments Using CAM's Variable Resolution Dynamical Core}",
   author={Zarzycki, Colin M and Levy, Michael N and Jablonowski, Christiane and Overfelt, James R and Taylor, Mark A and Ullrich, Paul A},
-  journal={J. Climate},
+  journal={Journal of Climate},
   volume={27},
   pages={5481--5503},
   year={2014}
@@ -954,7 +953,7 @@ journal = {Progress in Physical Geography}
 @article{ullrich2015remapping,
   title={Arbitrary-Order Conservative and Consistent Remapping and a Theory of Linear Maps, Part 1},
   author={Ullrich, P.~A. and Taylor, M.~A.},
-  journal={Mon. Weather Rev.},
+  journal={Monthly Weather Review},
   note={Under review},
   year={2015}
 }
