--- a/Ullrich-MountainSnowpack-ProjectDescription.tex
+++ b/Ullrich-MountainSnowpack-ProjectDescription.tex
@@ -319,7 +319,7 @@ PI Ullrich will be the primary administrator for the project, and will be respon
 
 We expect results and research progress will be presented at regular scientific meetings, including meetings of the American Geophysical Union (AGU) and the American Meteorological Society (AMS). This work will also be presented at the CESM annual working group meeting and CESM atmospheric working group meeting. We further anticipate that we will publish at least one peer-reviewed article for each year of the project duration.
 
-\bibliographystyle{ametsoc2014}  
+\bibliographystyle{wileyqj}  
 {\setbox0\vbox{\bibliography{MountainSnowpack}}}
 
 \end{document}
